# nix-templates

./: README.md  flake.nix
common-lisp/: README.md  clpmfile  flake.nix  myclproject-test.aoc  myclproject.aoc
common-lisp/src/: addition.lisp  package.lisp
common-lisp/tests/: addition-test.lisp  main.lisp  package.lisp
cpp/: CMakeLists.txt  README.md  flake.nix
cpp-library/: CMakeLists.txt  README.md  flake.nix
cpp-library/cmake/: Config.cmake.in
cpp-library/include/mylib/: test.h
cpp-library/src/: test.cpp
cpp-library/tests/: ExampleTest.cpp
cpp/tests/: CMakeLists.txt
esp-idf/: README.md  flake.nix  sdkconfig.defaults
esp-idf/main/: CMakeLists.txt  blink_main.c  blink_main.cpp
flutter-android/: README.md  flake.nix
qt-application/: .clang-format  CMakeLists.txt  README.md  flake.nix
qt-application/include/: MainWindow.h
qt-application/src/: MainWindow.cpp  main.cpp
qt-application/tests/: QtTestTest.cpp
qt-application/ui/: MainWindow.ui
rust/: Cargo.toml  README.md  flake.nix  rust-toolchain.toml
rust/src/: main.rs
